--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -31,3 +31,50 @@ html, body {
   width: 100%;
   text-align: center;
 }
+.img-title {
+  margin: 20px 0 0 0 ;
+  color: #a7a0a2;
+  font-size: 16px;
+}
+figcaption {
+  text-align: center;
+}
+.img-figure {
+  width: 320px;
+  height: 360px;
+  margin: 0;
+  padding: 40px;
+  background-color: #fff;
+  box-sizing: border-box;
+  cursor: pointer;
+  transform-origin: 0 50% 0;
+  transform-style: preserve-3d;
+  transition: transform .6s ease-in-out, left .6s ease-in-out, top .6s ease-in-out;
+}
+.is-inverse {
+  transform: translate(320px) rotateY(180deg);
+}
+.img-back {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  padding: 50px 40px;
+  overflow: auto;
+
+  color: #a7a0a2;
+  font-size: 22px;
+  line-height: 1.25;
+  text-align: left;
+
+  background-color: #fff;
+
+  box-sizing: border-box;
+  transform: rotateY(180deg) translateZ(1px);
+  backface-visibility: hidden;
+}
+p {
+  margin: 0;
+}
